--- a/index.html
+++ b/index.html
@@ -1,2 +1,16 @@
+<!doctype html>
 
-<h1> Salam Mohabati </h1>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>The HTML5 Herald</title>
+  <meta name="description" content="The HTML5 Herald">
+  <meta name="author" content="SitePoint">
+
+</head>
+
+<body>
+  <h1> Salam Mohabati </h1>
+</body>
+</html>
